fix: overflow scroll

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,6 +4,10 @@
 
 /* Add Your Custom CSS Here */
 
+body{
+overflow-x: hidden;
+}
+
 .prose img {
   border-radius: 30px;
 }
